WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143027
Fix crash in WebKit::RemoteObjectRegistry::sendInvocation
https://bugs.webkit.org/show_bug.cgi?id=143027
Summary
Fix crash in WebKit::RemoteObjectRegistry::sendInvocation
Anders Carlsson
Reported
2015-03-24 16:31:37 PDT
Fix crash in WebKit::RemoteObjectRegistry::sendInvocation
Attachments
Patch
(1.61 KB, patch)
2015-03-24 16:32 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-03-24 16:32:49 PDT
Created
attachment 249366
[details]
Patch
Sam Weinig
Comment 2
2015-03-24 16:49:18 PDT
Comment on
attachment 249366
[details]
Patch I would really like to see an API test for this.
Anders Carlsson
Comment 3
2015-03-24 16:54:45 PDT
Committed
r181921
: <
http://trac.webkit.org/changeset/181921
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug