Fix crash in WebKit::RemoteObjectRegistry::sendInvocation https://bugs.webkit.org/show_bug.cgi?id=143027 rdar://problem/20208674

Reviewed by Sam Weinig.

* WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm:
(-[WKWebProcessPlugInBrowserContextController dealloc]):
Make sure to invalidate the _WKRemoteObjectRegistry like we do in the UI process.

Canonical link: https://commits.webkit.org/161049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181921 268f45cc-cd09-0410-ab3c-d52691b4dbfc