Source/WebKit2/WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm
@@ -342,6 +342,8 @@ static void setUpResourceLoadClient(WKWebProcessPlugInBrowserContextController *
 
 - (void)dealloc
 {
+    [_remoteObjectRegistry _invalidate];
+
     _page->~WebPage();
 
     [super dealloc];
